templates/app-template/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: APP_NAME-stripprefix
  namespace: APP_NAME
spec:
  stripPrefix:
    prefixes:
      - /APP_NAME
